# dotfiles

./: .gitignore  aur-install  bashrc  kitty.conf  tmux.conf  zshrc
bash/: .bashrc  .profile
fish/: config.fish
fish/completions/: aws.fish  vi.fish
fish/functions/: agent.fish  agy.fish  claude.fish  codex.fish  fish_user_key_bindings.fish  ls.fish  sesh_connect.fish  vim.fish  y.fish
kitty/: kitty.conf  navigate_kitty.py  pass_keys.py  theme.conf
kitty/themes/: dark.conf  light.conf
launchd/user/: com.joao.dotfiles.theme-monitor.plist
mise/: config.toml
nvim/: .colorscheme  .gitattributes  .stylua.toml  ginit.lua  init.lua  lazy-lock.json  nvim-pack-lock.json  test-native-nightly.vim
nvim/colors/: casey.lua  fleury.lua  handmade.lua
nvim/compiler/: cpp.vim  kotlin.vim  odin.vim  zig.vim
nvim/ftplugin/: java.lua
nvim/lua/: autocmds.lua  cmdline.lua  colorscheme.lua  copilot-scripts.lua  keymaps.lua  lazy_pack.lua  lookup.lua  neovide.lua  options.lua  plugins.lua  statusline.lua  syntax.lua  utils.lua  yank.lua
nvim/plugin/: 00-colorschemes.lua  blink-cmp.lua  c3.lua  conform.lua  diagflow.lua  diffview.lua  fff.lua  gitsigns.lua  image.lua  indent-blankline.lua  lazydev.lua  lspconfig.lua  mason.lua  mini-align.lua  mini-bufremove.lua  mini-icons.lua  mypy.lua  neogit.lua  oil.lua  quicker.lua  smart-splits.lua  text-case.lua  tmux.lua  (+7 more)
scripts/: monitor_theme.py
theme-monitor/: Cargo.toml
theme-monitor/src/: linux.rs  macos.rs  main.rs  state.rs
tmux/: .tmux.conf  tmux.conf
wezterm/: .wezterm.lua  wezterm.lua
zsh/: .zshrc
(+82 files in other folders)
